Added ErrorProne and fixed all errors and warnings flagged