@@ -14,19 +14,19 @@ public class BijectiveMapTest {
 
 	@Before
 	public void setup() {
-		missingX = new Integer(123);
-		map = new BijectiveMap<Integer, String>(missingX, "fail");
-		map.connect(new Integer(1), "one");
+		missingX = 123;
+		map = new BijectiveMap<>(missingX, "fail");
+		map.connect(1, "one");
 	}
 
 	@Test
 	public void testSimple1() {
-		assertEquals(new Integer(1), map.getX("one"));
+		assertEquals(Integer.valueOf(1), map.getX("one"));
 	}
 
 	@Test
 	public void testSimple2() {
-		assertEquals("one", map.getY(new Integer(1)));
+		assertEquals("one", map.getY(1));
 	}
 
 	@Test
@@ -36,14 +36,14 @@ public class BijectiveMapTest {
 
 	@Test
 	public void testMissing2() {
-		assertEquals("fail", map.getY(new Integer(12345)));
+		assertEquals("fail", map.getY(12345));
 	}
 
 	@Test
 	public void testOverride() {
-		map.connect(new Integer(1), "oneone");
-		assertEquals(new Integer(1), map.getX("oneone"));
-		assertEquals("oneone", map.getY(new Integer(1)));
+		map.connect(1, "oneone");
+		assertEquals(Integer.valueOf(1), map.getX("oneone"));
+		assertEquals("oneone", map.getY(1));
 
 		assertEquals(missingX, map.getX("one"));
 	}
@@ -52,7 +52,7 @@ public class BijectiveMapTest {
 	public void testAll() {
 		Set<Integer> allX = map.getAllX();
 		assertEquals(1, allX.size());
-		assertEquals(new Integer(1), allX.iterator().next());
+		assertEquals(Integer.valueOf(1), allX.iterator().next());
 
 		Set<String> allY = map.getAllY();
 		assertEquals(1, allY.size());
